// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Calendar Calendar renders date view fine 1`] = `
<div
  className="snapshot-calendar-calendar "
  data-qa-id="popupCalendar"
  style={undefined}
  tabIndex={0}
>
  <div
    className="snapshot-calendar-calendar-header"
  >
    <i
      className="icon icon-chevron-left"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    />
    <span
      className="snapshot-calendar-calendar-header-today"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      Today
    </span>
    <span
      className="snapshot-calendar-calendar-header-title"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      Jun 2018
    </span>
    <i
      className="icon icon-chevron-right"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    />
  </div>
  <table
    className="snapshot-calendar-calendar-table"
  >
    <tbody>
      <tr
        className="snapshot-calendar-calendar-table-header"
      >
        <th
          className="snapshot-calendar-calendar-table-header-cell"
          title="Monday"
        >
          M
        </th>
        <th
          className="snapshot-calendar-calendar-table-header-cell"
          title="Tuesday"
        >
          T
        </th>
        <th
          className="snapshot-calendar-calendar-table-header-cell"
          title="Wednesday"
        >
          W
        </th>
        <th
          className="snapshot-calendar-calendar-table-header-cell"
          title="Thursday"
        >
          T
        </th>
        <th
          className="snapshot-calendar-calendar-table-header-cell"
          title="Friday"
        >
          F
        </th>
        <th
          className="snapshot-calendar-calendar-table-header-cell"
          title="Saturday"
        >
          S
        </th>
        <th
          className="snapshot-calendar-calendar-table-header-cell"
          title="Sunday"
        >
          S
        </th>
      </tr>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            28
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            29
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            30
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            31
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            1
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            3
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            4
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-today"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            5
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            6
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            7
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            8
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            9
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            10
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            11
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            12
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            13
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            14
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            15
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            16
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            17
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            18
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            19
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            20
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            21
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            22
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            23
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            24
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            25
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            26
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            27
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            28
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            29
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-weekend snapshot-calendar-calendar-day-disable"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            30
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            1
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            3
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            4
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            5
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            6
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            7
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-day snapshot-calendar-calendar-day-othermonth snapshot-calendar-calendar-day-weekend"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            8
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/Calendar Calendar renders month mode fine 1`] = `
<div
  className="snapshot-calendar-calendar "
  data-qa-id="popupCalendar"
  style={undefined}
  tabIndex={0}
>
  <div
    className="snapshot-calendar-calendar-header"
  >
    <i
      className="icon icon-chevron-left"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    />
    <span
      className="snapshot-calendar-calendar-header-today"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      Current Month
    </span>
    <span
      className="snapshot-calendar-calendar-header-title"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      2018
    </span>
    <i
      className="icon icon-chevron-right"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    />
  </div>
  <table
    className="snapshot-calendar-calendar-table"
  >
    <tbody>
      <tr
        className="snapshot-calendar-calendar-row"
      >
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Jan
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Feb
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Mar
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Apr
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-row"
      >
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            May
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month snapshot-calendar-calendar-month-current"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Jun
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Jul
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Aug
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-row"
      >
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Sep
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Oct
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Nov
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Dec
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/Calendar Calendar renders month view fine 1`] = `
<div
  className="snapshot-calendar-calendar "
  data-qa-id="popupCalendar"
  style={undefined}
  tabIndex={0}
>
  <div
    className="snapshot-calendar-calendar-header"
  >
    <i
      className="icon icon-chevron-left"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    />
    <span
      className="snapshot-calendar-calendar-header-today"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      Today
    </span>
    <span
      className="snapshot-calendar-calendar-header-title"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      2018
    </span>
    <i
      className="icon icon-chevron-right"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    />
  </div>
  <table
    className="snapshot-calendar-calendar-table"
  >
    <tbody>
      <tr
        className="snapshot-calendar-calendar-row"
      >
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Jan
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Feb
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Mar
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Apr
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-row"
      >
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            May
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month snapshot-calendar-calendar-month-current"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Jun
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Jul
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Aug
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-row"
      >
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Sep
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Oct
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Nov
          </div>
        </td>
        <td>
          <div
            className="undefinedcalendar-table-cell snapshot-calendar-calendar-month"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Dec
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/Calendar Calendar renders year view fine 1`] = `
<div
  className="snapshot-calendar-calendar "
  data-qa-id="popupCalendar"
  style={undefined}
  tabIndex={0}
>
  <div
    className="snapshot-calendar-calendar-header"
  >
    <i
      className="icon icon-chevron-left"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    />
    <span
      className="snapshot-calendar-calendar-header-today"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      Today
    </span>
    <span
      className="snapshot-calendar-calendar-header-title"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      2010-2019
    </span>
    <i
      className="icon icon-chevron-right"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    />
  </div>
  <table
    className="snapshot-calendar-calendar-table"
  >
    <tbody>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year snapshot-calendar-calendar-year-first"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2009
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2010
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2011
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2012
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2013
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2014
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2015
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2016
          </div>
        </td>
      </tr>
      <tr
        className="snapshot-calendar-calendar-table-row"
      >
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2017
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year snapshot-calendar-calendar-year-current"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2018
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2019
          </div>
        </td>
        <td>
          <div
            className="snapshot-calendar-calendar-table-cell snapshot-calendar-calendar-year snapshot-calendar-calendar-year-last"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            2020
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
